Add user-service
