# controllers/auth-controllers.js
@@ -1,9 +1,9 @@
 import ctrlWrapper from '../decorators/ctrlWrapper.js';
-import userService from '../service/user-service.js';
+import authService from '../service/auth-service.js';
 
 const signup = async (req, res) => {
   const { email, password } = req.body;
-  const userData = await userService.signup(email, password);
+  const userData = await authService.signup(email, password);
 
   res.cookie('refreshToken', userData.refreshToken, {
     maxAge: 30 * 24 * 60 * 60 * 100,
@@ -14,7 +14,7 @@ const signup = async (req, res) => {
 
 const login = async (req, res) => {
   const { email, password } = req.body;
-  const userData = await userService.login(email, password);
+  const userData = await authService.login(email, password);
   res.cookie('refreshToken', userData.refreshToken, {
     maxAge: 30 * 24 * 60 * 60 * 100,
     httpOnly: true,
@@ -24,7 +24,7 @@ const login = async (req, res) => {
 
 const logout = async (req, res) => {
   const { refreshToken } = req.cookies;
-  const token = await userService.logout(refreshToken);
+  const token = await authService.logout(refreshToken);
   res.clearCookie('refreshToken');
   res.status(200).json({
     message: 'Logout success',
